ADDED CHAT FOR THE AFTER LOGIN PART

--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <title>Error</title>
-  <link rel="stylesheet" href="/stylesheets/style.css">
+    <meta charset="utf-8" />
+    <title>Error</title>
+    <link rel="stylesheet" href="/stylesheets/style.css">
 </head>
 <body>
-  <div class="container">
+<div class="container">
     <h1>Error</h1>
     <p class="error"><%= message %></p>
-    <p>Status: <%= error.status %></p>
-  </div>
+    <p class="hint">Status: <%= error.status %></p>
+</div>
 </body>
 </html>
